Sat Apr 30 14:25:55 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_modulo): {Fixnum,Bignum}#modulo is unified into
	  Integer.

	* bignum.c (rb_big_modulo): Don't define Bignum#modulo.

Sat Apr 30 14:04:30 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_divmod): {Fixnum,Bignum}#divmod is unified into
	  Integer.

	* bignum.c (rb_big_divmod): Don't define Bignum#divmod.

Sat Apr 30 13:20:00 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_fdiv): {Fixnum,Bignum}#fdiv is unified into
	  Integer.

	* bignum.c (rb_big_fdiv): Don't define Bignum#fdiv.

Sat Apr 30 12:25:43 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_pow): {Fixnum,Bignum}#** is unified into
	  Integer.

	* bignum.c (rb_big_pow): Don't define Bignum#**.

Sat Apr 30 12:28:59 2016  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_comp): Renamed from rb_big_neg.

	* numeric.c (fix_comp): Renamed from fix_rev.

Sat Apr 30 12:25:43 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_comp): {Fixnum,Bignum}#~ is unified into
	  Integer.

	* bignum.c (rb_big_neg): Don't define Bignum#~.

	* internal.h (rb_big_neg): Declared.

Sat Apr 30 12:07:42 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_and): {Fixnum,Bignum}#& is unified into
	  Integer.

	* bignum.c (rb_big_and): Don't define Bignum#|.

Sat Apr 30 11:56:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread: removed dummy extension library.  thread_sync.c
	  provides "thread.rb" already.

Sat Apr 30 11:53:48 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_or): {Fixnum,Bignum}#| is unified into
	  Integer.

	* bignum.c (rb_big_or): Don't define Bignum#|.

Sat Apr 30 11:18:47 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* vm_trace.c: Fix typos. [ci skip]

Sat Apr 30 10:09:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (establishShell): honor USER environment variable
	  and login name over uid, one pid can be shared by some login
	  names.
